--- a/index.html
+++ b/index.html
@@ -3,32 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cafeteria - los mejores Cafe times</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Allerta&family=Montserrat&family=Pacifico:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles_curso.css">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles-responsive.css">
 </head>
 
 <body>
-
-<!-- 
-  <div class="ola" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
-      style="height: 100%; width: 100%;">
-      <path d="M0.00,49.98 C245.77,284.70 296.56,-101.14 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-        style="stroke: none; fill: rgb(255, 255, 255);"></path>
-    </svg></div> -->
-
   <!-- header -->
   <!-- estilos en linea <header style="background: brown;"></header> -->
+
 
   <section id="portada" class="portada">
     <!-- portada -->
     <header id="header" class="header contenedor">
+
       <figure class="logotipo">
         <!-- logotipo -->
         <!-- <img src="img/logo.png" width="60" alt="logo cafe" /> -->
-        <span>CofeeTime</span>
+        <span>CafeTime</span>
       </figure>
 
       <nav class="menu">
@@ -36,7 +35,7 @@
         <!-- ul es una lista desordenada -->
         <!-- ol es una lista ordenada -->
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#cafes">Cafes</a></li>
           <li><a href="precios.html">Precios</a></li>
         </ul>
@@ -49,7 +48,8 @@
       <!--titulo-->
       <h3 class="title-a">El mejor cafe intenso para momentos especiales</h3>
       <!--Botón-->
-      <a href="#cafes" class="button">Conoce más</a>
+      <!-- <button class="button">Conoce mas</button> -->
+      <a class="button" href="#cafes">Conoce mas</a>
     </div>
 
   </section>
@@ -88,77 +88,69 @@
 
     </article>
 
-
   </section>
 
-  <footer class="footer">
-
-
-
-
+  <footer class="footer" >
     <div class="contenedor">
+      
       <div class="contacto">
         <img src="img/imagenfooter.png" alt="imagen footer" width="300" />
-
-        <a href="tel:+56949936666"> <strong>Teléfono</strong> <span>95458666</span></a>
-
+  
+        <a href="tel:+569954587415"> <strong>Teléfono</strong> <span>9545555</span></a>
+  
         <a href="mailto:contacto@cafetime.cl"> <strong>E-mail</strong> <span>contacto@cafetime.cl</span> </a>
       </div>
 
-      <form class="formulario" method="post">
+      <form class="formulario">
 
         <div class="col1">
           <label for="nombre">Nombre</label>
           <input type="text" id="nombre" required name="nombre" />
-
+  
           <label for="email">E-mail</label>
           <input type="email" id="email" required name="email" />
-
+  
           <div class="generos">
             <label for="mujer">
               <input type="radio" id="mujer" name="genero" value="mujer" required> Mujer
             </label>
-
+  
             <label for="hombre">
               <input type="radio" id="hombre" name="genero" value="hombre" required> Hombre
             </label>
           </div>
-
+  
           <div class="intereses">
+
             <label for="cotizacion">
-              <input type="checkbox" id="cotizacion" name="intereses" value="cotizacion"> Cotización
+              <input type="checkbox" id="cotizacion" name="intereses[]" value="cotizacion"> Cotización
             </label>
-
+  
             <label for="reclamos">
-              <input type="checkbox" id="reclamos" name="intereses" value="reclamos"> Reclamos
+              <input type="checkbox" id="reclamos" name="intereses[]" value="reclamos"> Reclamos
             </label>
-
+  
             <label for="observaciones">
-              <input type="checkbox" id="observaciones" name="intereses" value="observaciones"> Observaciones
+              <input type="checkbox" id="observaciones" name="intereses[]" value="observaciones"> Observaciones
             </label>
-
+  
             <label for="otros">
-              <input type="checkbox" id="otros" name="intereses" value="otros"> Otros
+              <input type="checkbox" id="otros" name="intereses[]" value="otros"> Otros
             </label>
           </div>
-
-
+        
         </div>
-
+  
         <div class="col2">
           <label for="comentarios">Comentarios</label>
           <textarea name="" id="comentarios" cols="27" rows="7"></textarea>
           <input class="button" type="submit" value="Enviar">
         </div>
-
+  
       </form>
-
+  
     </div>
-    <!-- <div class="ola2" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
-        style="height: 100%; width: 100%;">
-        <path d="M0.00,49.98 C245.77,284.70 296.56,-101.14 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-          style="stroke: none; fill: rgb(255, 255, 255);"></path>
-      </svg></div> -->
+  
   </footer>
 
 </body>
