--- a/precios.html
+++ b/precios.html
@@ -1,176 +1,180 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cafeteria - Precios café</title>
+  <title>Cafeteria - Precios de los cafes</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Allerta&family=Montserrat&family=Pacifico:wght@400;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="css/styles_curso.css">
+  <link href="https://fonts.googleapis.com/css2?family=Allerta&family=Montserrat&family=Pacifico:wght@400;700&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-  <!-- header -->
-  <header id="header" class="header background-general">
-    <div class="contenedor">
-      <figure class="logotipo">
-        <!-- logotipo -->
-        <!-- <img src="img/logo.png" width="60" alt="logo cafe" /> -->
-        <span>CofeeTime</span>
-      </figure>
-
-      <nav class="menu">
-        <!-- menu -->
-        <!-- ul es una lista desordenada -->
-        <!-- ol es una lista ordenada -->
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="index.html#cafes">Cafes</a></li>
-          <li><a href="precios.html" target="_blank">Precios</a></li>
-        </ul>
-      </nav>
-    </div>
-
-  </header>
-  <!-- /header -->
-
-  <!-- contenido -->
-  <main>
-    <section class="tabla">
+  <!-- Header-->
+    <header id="header" class="header background-general">
       <div class="contenedor">
-        <div class="titulo-precio">
-          <span>Precios Coffe Time</span>
-          <img src="/img/coffetimeprecios1.png" alt="" width="100">
-        </div>
-        <table>
-          <tbody>
-            <tr>
-              <td>Capuccino<br> <i>Sabor Intenso y exquisito</i> </td>
-              <td><div class="precio">$1000</div></td>
-            </tr>
-            <tr>
-              <td>Mocaccino<br><i>Ricolino</i> </td>
-              <td><div class="precio">$790</div></td>
-            </tr>
-            <tr>
-              <td>Vainilla Late<br><i>Cremoso y delicioso café con sabor a vainilla</i></td>
-              <td><div class="precio">$750</div></td>
-            </tr>
-            <tr>
-              <td>Frappe<br><i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</i></td>
-              <td><div class="precio">$850</div></td>
-            </tr>
-            <tr>
-              <td>Machiato<br><i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</i></td>
-              <td><div class="precio">$990</div></td>
-            </tr>
-            <tr>
-              <td>Americano<br><i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</i></td>
-              <td><div class="precio">$1190</div></td>
-            </tr>
-          </tbody>
-        </table>
+        <figure class="logotipo">
+          <!-- logotipo -->
+          <!-- <img src="img/logo.png" width="60" alt="logo cafe" /> -->
+          <span>CafeTime</span>
+        </figure>
+  
+        <nav class="menu">
+          <!-- menu -->
+          <!-- ul es una lista desordenada -->
+          <!-- ol es una lista ordenada -->
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#cafes">Cafes</a></li>
+            <li><a href="precios.html">Precios</a></li>
+          </ul>
+        </nav>
       </div>
-    </section>
-  </main>
+    </header>
 
+  <!-- /Header-->
+  
+  <!-- Contenido -->
+    <main>
 
-  <!-- /contenido -->
+      <section class="tabla">
+        <div class="contenedor">
+          <div class="titulo-precio">
+            <span>Precios CafeTime</span>
+            <img src="img/coffetimeprecios1.png" alt="" width="100">
+          </div>
+          <table>
+            <tbody>
+              <tr>
+                <td>Capuchino <br> <i>Sabor Intenso y exquisito</i></td>
+                <td> <div class="precio">$1000</div></td>
+              </tr>
+              <tr>
+                <td>Mocachino <br> <i> Delicioso cafe con sabor chocolate </i></td>
+                <td><div class="precio">$1200</div></td>
+              </tr>
+              <tr>
+                <td>Vainilla Late <br> <i>Cremoso y delicioso cafe con sabor a Vainilla</i></td>
+                <td><div class="precio">$1100</div></td>
+              </tr>
+              <tr>
+                <td>Frappe <br> <i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</i></td>
+                <td><div class="precio">$1100</div></td>
+              </tr>
+              <tr>
+                <td>Machiato <br> <i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</i></td>
+                <td><div class="precio">$1000</div></td>
+              </tr>
+              <tr>
+                <td>Americano <br> <i>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</i></td>
+                <td><div class="precio">$900</div></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+       </section>
+    </main>
 
-  <!-- footer -->
-  <footer class="footer">
+  <!-- /Contenido -->
+
+  <!-- Footer -->
+  <footer class="footer" >
     <div class="contenedor">
+      
       <div class="contacto">
         <img src="img/imagenfooter.png" alt="imagen footer" width="300" />
-
-        <a href="tel:+56949935660"> <strong>Teléfono</strong> <span>954587415</span></a>
-
+  
+        <a href="tel:+569954587415"> <strong>Teléfono</strong> <span>9545874</span></a>
+  
         <a href="mailto:contacto@cafetime.cl"> <strong>E-mail</strong> <span>contacto@cafetime.cl</span> </a>
       </div>
 
-      <form class="formulario" method="post">
+      <form class="formulario">
 
         <div class="col1">
           <label for="nombre">Nombre</label>
           <input type="text" id="nombre" required name="nombre" />
-
+  
           <label for="email">E-mail</label>
           <input type="email" id="email" required name="email" />
-
+  
           <div class="generos">
             <label for="mujer">
               <input type="radio" id="mujer" name="genero" value="mujer" required> Mujer
             </label>
-
+  
             <label for="hombre">
               <input type="radio" id="hombre" name="genero" value="hombre" required> Hombre
             </label>
           </div>
-
+  
           <div class="intereses">
+
             <label for="cotizacion">
-              <input type="checkbox" id="cotizacion" name="intereses" value="cotizacion"> Cotización
+              <input type="checkbox" id="cotizacion" name="intereses[]" value="cotizacion"> Cotización
             </label>
-
+  
             <label for="reclamos">
-              <input type="checkbox" id="reclamos" name="intereses" value="reclamos"> Reclamos
+              <input type="checkbox" id="reclamos" name="intereses[]" value="reclamos"> Reclamos
             </label>
-
+  
             <label for="observaciones">
-              <input type="checkbox" id="observaciones" name="intereses" value="observaciones"> Observaciones
+              <input type="checkbox" id="observaciones" name="intereses[]" value="observaciones"> Observaciones
             </label>
-
+  
             <label for="otros">
-              <input type="checkbox" id="otros" name="intereses" value="otros"> Otros
+              <input type="checkbox" id="otros" name="intereses[]" value="otros"> Otros
             </label>
           </div>
-
-
+        
         </div>
-
+  
         <div class="col2">
           <label for="comentarios">Comentarios</label>
           <textarea name="" id="comentarios" cols="27" rows="7"></textarea>
           <input class="button" type="submit" value="Enviar">
         </div>
-
+  
       </form>
-
+  
     </div>
-
+  
   </footer>
-  <!-- /footer -->
+  <!-- /Footer -->
 </body>
-
 </html>
 
-<!-- <table>
+<!-- 
+<table>
   <thead>
     <tr>
       <th>Productos</th>
       <th>Precios</th>
       <th>Descripción</th>
-    </tr>
+    </tr> 
   </thead>
+
   <tbody>
     <tr>
-      <td>Capuccino</td>
+      <td>Capuchino</td>
       <td>$1000</td>
       <td>Sabor Intenso y exquisito</td>
     </tr>
+
     <tr>
-      <td>Mocaccino</td>
+      <td>Mocachino</td>
       <td>$750</td>
-      <td>Ricolino</td>
+      <td>Delicioso cafe con sabor chocolate</td>
     </tr>
+
     <tr>
       <td>Vainilla Late</td>
       <td>$850</td>
-      <td>Cremoso y delicioso café con sabor a vainilla</td>
+      <td>Cremoso y delicioso cafe con sabor a Vainilla</td>
     </tr>
   </tbody>
 </table> -->
+
+
+<!-- Esto es un comentario -->
